--- a/samples/palindrome.yml
+++ b/samples/palindrome.yml
@@ -4,36 +4,36 @@ category: "Language"
 tapes: 1
 blank_symbol: "_"
 initial_state: "q0"
-final_state: "q8"
+final_states: ["q8"]
 input_spec:
   - label: "Input String"
     regex: "^[ab]*$"
     example: "abba"
 transition:
-  - [[ "q0", ["a"] ], [ "q1", ["-"], ["R"] ]]
-  - [[ "q0", ["b"] ], [ "q2", ["-"], ["R"] ]]
-  - [[ "q0", ["-"] ], [ "q8", ["-"], ["N"] ]]
+  - [[ "q0", ["a"] ], [ "q1", ["_"], ["R"] ]]
+  - [[ "q0", ["b"] ], [ "q2", ["_"], ["R"] ]]
+  - [[ "q0", ["_"] ], [ "q8", ["_"], ["N"] ]]
 
   - [[ "q1", ["a"] ], [ "q3", ["a"], ["R"] ]]
   - [[ "q1", ["b"] ], [ "q3", ["b"], ["R"] ]]
-  - [[ "q1", ["-"] ], [ "q3", ["-"], ["N"] ]]
+  - [[ "q1", ["_"] ], [ "q3", ["_"], ["N"] ]]
 
-  - [[ "q2", ["-"] ], [ "q8", ["-"], ["N"] ]]
+  - [[ "q2", ["_"] ], [ "q8", ["_"], ["N"] ]]
   - [[ "q2", ["a"] ], [ "q4", ["a"], ["R"] ]]
   - [[ "q2", ["b"] ], [ "q4", ["b"], ["R"] ]]
 
   - [[ "q3", ["a"] ], [ "q3", ["a"], ["R"] ]]
   - [[ "q3", ["b"] ], [ "q3", ["b"], ["R"] ]]
-  - [[ "q3", ["-"] ], [ "q5", ["-"], ["L"] ]]
+  - [[ "q3", ["_"] ], [ "q5", ["_"], ["L"] ]]
 
   - [[ "q4", ["a"] ], [ "q4", ["a"], ["R"] ]]
   - [[ "q4", ["b"] ], [ "q4", ["b"], ["R"] ]]
-  - [[ "q4", ["-"] ], [ "q6", ["-"], ["L"] ]]
+  - [[ "q4", ["_"] ], [ "q6", ["_"], ["L"] ]]
   
-  - [[ "q5", ["a"] ], [ "q7", ["-"], ["L"] ]]
+  - [[ "q5", ["a"] ], [ "q7", ["_"], ["L"] ]]
 
-  - [[ "q6", ["b"] ], [ "q7", ["-"], ["L"] ]]
+  - [[ "q6", ["b"] ], [ "q7", ["_"], ["L"] ]]
 
   - [[ "q7", ["a"] ], [ "q7", ["a"], ["L"] ]]
   - [[ "q7", ["b"] ], [ "q7", ["b"], ["L"] ]]
-  - [[ "q7", ["-"] ], [ "q0", ["-"], ["R"] ]]
+  - [[ "q7", ["_"] ], [ "q0", ["_"], ["R"] ]]
